wisdom-frontend/deploy/wisdom-frontend-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: wisdom-frontend
  namespace: apps
  labels:
    app: wisdom-frontend
  annotations:
    fluxcd.io/tag.wisdom-frontend: glob:2.*
    fluxcd.io/automated: 'true'
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wisdom-frontend
  template:
    metadata:
      name: wisdom-frontend
      labels:
        app: wisdom-frontend
      annotations:
        #linkerd.io/inject: enabled
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: wisdom-frontend
        image: mejlholm/wisdom-frontend:2.0.99
        resources:
          limits:
            memory: "64Mi"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
