wisdom-frontend/deploy/wisdom-frontend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: wisdom-frontend
  namespace: apps
  annotations:
    openapi-map/scrape: 'true'
spec:
  selector:
    app: wisdom-frontend
  ports:
    - name: default
      port: 8080
      protocol: TCP
      targetPort: 8080
