wisdom-frontend/deploy/wisdom-frontend-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wisdom-frontend
  namespace: apps
  annotations:
    openapi-map/scrape: 'true'
    openapi-map/language: 'java'
    openapi-map/runtime: 'quarkus'
spec:
  rules:
  - host: wisdom.mejlholm.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wisdom-frontend
          servicePort: 8080
